week4/k8s-week5-project/manifests/assets-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: assets
  labels:
    app: assets
    tier: assets

spec:
  replicas: 1

  selector:
    matchLabels:
      app: assets

  template:
    metadata:
      labels:
        app: assets
        tier: assets

    spec:

      containers:
      - name: assets

        image: nginx:1.25-alpine

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"

          limits:
            cpu: "100m"
            memory: "64Mi"

        volumeMounts:
        - name: assets-content
          mountPath: /usr/share/nginx/html

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

      volumes:
      - name: assets-content
        emptyDir: {}
