week4/k8s-week5-project/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend
    tier: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
        tier: backend

    spec:

      containers:
      - name: backend

        image: nginx:1.25-alpine

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"

          limits:
            cpu: "200m"
            memory: "128Mi"

        volumeMounts:
        - name: api-content
          mountPath: /usr/share/nginx/html

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

      volumes:
      - name: api-content
        emptyDir: {}
