week4/k8s-week5-project/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
        tier: frontend

    spec:

      containers:
      - name: frontend

        image: nginx:1.25-alpine

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"

          limits:
            cpu: "200m"
            memory: "128Mi"

        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

      volumes:
      - name: html
        emptyDir: {}
