week4/k8s-week5-project/manifests/assets-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: assets-service
  labels:
    app: assets

spec:
  type: ClusterIP

  selector:
    app: assets

  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
