week4/k8s-week5-project/manifests/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
