week4/k8s-week5-project/manifests/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
